feat: add pagination and pagination tests to compilation service